@@ -1,3 +1,13 @@
+Wed Aug 27 21:24:33 UTC 2008  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/Faults/client.cpp:
+
+          Added sleep after twoway invocation for suicide test cases. The
+          client will wait for the shutdown callback and abort until timeout.
+          If it timed out, the test will fail, otherwise, the test succeed.
+          This should fix test failure due to twoway request returned before
+          receiving shutdown callback and abort.
+
 Tue Aug 26 22:18:38 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * tao/Transport.cpp (purge_entry):
